# world-tales-game

./: CMakeLists.txt  README.md  main.cpp
include/: CommunityGarden.h  FilmStudio.h  FishingDock.h  Game.h  GarmentFactory.h  HeritageHall.h  Kitchen.h  Room.h
src/: CommunityGarden.cpp  FilmStudio.cpp  FishingDock.cpp  Game.cpp  GarmentFactory.cpp  HeritageHall.cpp  Kitchen.cpp
